--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="author" content="Ezzat Chebaro">
     <title>Vertcoin Mining LCC | Let's Mine Together</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href=".VertcoinLCC/css/style.css">
   </head>
   <body>
     <header>
