--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
           <li class="current"><a href="main.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="http://www.boredbutton.com/random" target="_blank">Haha yes</a></li>
+          <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Haha yes</a></li>
         </ul>
       </div>
     </header>
